--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>common-mgenerator</groupId>
-	<artifactId>common-mgenerator</artifactId>
+	<groupId>com.hithub.generator</groupId>
+	<artifactId>mybatis-generator</artifactId>
 	<version>1.0.0</version>
-	<name>common-mgenerator</name>
+	<name>generator</name>
 	<url>http://maven.apache.org</url>
 	<dependencies>
 		<dependency>
