--- a/src/main/resources/init.properties
+++ b/src/main/resources/init.properties
@@ -1,20 +1,20 @@
 #Mybatis Generator configuration
-classPath=D:/wuspaces/o2o/common-mgenerator/lib/mysql-connector-java-5.1.30.jar
+classPath=D:/ideaworkspace/koochegit/generator/lib/mysql-connector-java-5.1.30.jar
 driverClass=com.mysql.jdbc.Driver
 
 #db
-jdbc_url=jdbc:mysql://o2omysql.m.aomygod.api:3306/o2o_college?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-jdbc_user=dev
-jdbc_password=dev123456
-schema=o2o_college
+jdbc_url=jdbc:mysql://127.0.0.1:3306/generator?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+jdbc_user=root
+jdbc_password=root
+schema=generator
 
 #model Xxx
-targetPackageModelXxx=com.aomygod.college.entity
-modelProjectXxx=D:/wuspaces/o2o/o2o-college/o2o-college-model/src/main/java
+targetPackageModelXxx=org.mybatis.generator.modules.entity
+modelProjectXxx=D:/ideaworkspace/koochegit/generator/src/main/java
 targetPackageMapXxx=mapper
-mapProjectXxx=D:/wuspaces/o2o/o2o-college/o2o-college-service/src/main/resources
-targetPackageClientXxx=com.aomygod.college.modules.dao
-clientProjectXxx=D:/wuspaces/o2o/o2o-college/o2o-college-service/src/main/java
+mapProjectXxx=D:/ideaworkspace/koochegit/generator/src/main/resources
+targetPackageClientXxx=org.mybatis.generator.modules.mapper
+clientProjectXxx=D:/ideaworkspace/koochegit/generator/src/main/java
 #service controller
 targetPackageControllerXxx=Xxx
 targetProjectControllerXxx=Xxx
