--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     </dependencies>
 
     <build>
-        <plugins>
+        <!--<plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -147,7 +147,7 @@
                     </connectors>
                 </configuration>
             </plugin>
-        </plugins>
+        </plugins>-->
     </build>
 
 </project>
