--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/generator?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-    username: root
-    password: root
+    url: jdbc:mysql://o2omysql.m.aomygod.api:3306/o2o_college?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
+    username: dev
+    password: dev123456
     initialSize: 5
     maxActive: 50
     minIdle: 10
