--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/generate?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8
-    username: dev
+    username: dev123456
     password: dev12345678
     initialSize: 5
     maxActive: 50
